# primitive-bench

./: .gitignore  CONTRIBUTING.md  INTERPACKAGE.md  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  golden_data.yml  new_adapter.yml  new_vertical.yml  slice_proposal.yml
.github/workflows/: ci.yml  labels.yml  pr-title.yml
apps/cli/: pyproject.toml
apps/cli/src/primitive_bench_cli/: main.py
apps/docs/: DECISIONS.md
apps/docs/methodology/: v3.md
apps/mcp/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/mcp/app/[transport]/: route.ts
apps/mcp/data/: chunking.json  crawl.json  extraction.json  reranker.json
apps/mcp/lib/: leaderboard.ts  schema.ts
apps/mcp/test/: leaderboard.test.ts  smoke.mjs
apps/mcp/types/: bench-report.d.ts  bench-report.schema.json
data/results/public-snapshot/: extraction.json  vectordb.json  websearch.json
docker/: Dockerfile.base  docker-compose.vectordb.yml
golden-sets-public/: README.md
golden-sets-public/chunking/: README.md  dev.example.jsonl
golden-sets-public/chunking/corpora/: example_space.md  example_support.md
golden-sets-public/crawl/: README.md  dev.example.jsonl
golden-sets-public/ocr/: README.md  dev.example.jsonl
golden-sets-public/reranker/: README.md  dev.example.jsonl
golden-sets-public/retrieval/: README.md  dev.example.jsonl
golden-sets-public/vectordb/: README.md  dev.example.jsonl
