[project]
name = "primitive-bench-cli"
version = "0.1.0"
description = "The `bench` CLI: init / run / view / submit."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["bench-schemas", "bench-core", "bench-stats", "bench-adapters", "typer>=0.27.0"]

[project.scripts]
bench = "primitive_bench_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/primitive_bench_cli"]
